--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-card class="logincard">
-    <div fxLayoutAlign="end">
+    <div>
       <button mat-icon-button class="close-button">
         <mat-icon routerLink="/home" class="close-icon" color="warn">close</mat-icon>
       </button>
@@ -85,8 +85,8 @@
             </mat-form-field>
 
             <button mat-raised-button type="submit" class="signupBtn">Signup</button>
-
           </form>
+
         </mat-tab>
       </mat-tab-group>
     </div>
