--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -11,7 +11,7 @@
           </div>
 
           <div class="dashlink">
-            <a class="dashlink" routerLink="/dashboard">Dashboard</a>
+            <a class="dashlink" routerLink="/admin">Dashboard</a>
           </div>
        </div>  
 
@@ -21,7 +21,7 @@
           </div>
 
           <div class="workerlink">
-            <a class="workerlink" routerLink="/bookingform">Technicians</a>
+            <a class="workerlink" routerLink="/technicians">Technicians</a>
           </div>
         </div> 
 
