--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,13 +78,13 @@
           <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
         
-          <!-- Position Column -->
-          <ng-container matColumnDef="position">
+          <!-- service_id Column -->
+          <ng-container matColumnDef="service_id">
             <th mat-header-cell *matHeaderCellDef>Service ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.service_id}} </td>
           </ng-container>
         
-          <!-- Name Column -->
+          <!-- name Column -->
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Service Type </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
