--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -11,7 +11,7 @@
           </div>
 
           <div class="dashlink">
-            <a class="dashlink" routerLink="/dashboard">Dashboard</a>
+            <a class="dashlink" routerLink="/admin">Dashboard</a>
           </div>
        </div>  
 
